# hackathon-physical-ai-and-humanoid-robotics-book

./: .gitignore  404.html  index.html  package.json  sitemap.xml
.claude/: settings.local.json
.specify/physical-ai-humanoid-robotics/: module-1-outline.md  module-2-outlines.md  module-3-outline.md  module-4-outline.md  spec.md  tasks.md
assets/css/: styles.231111f3.css  styles.3b4479f4.css  styles.575ed7de.css  styles.d3953d9d.css
assets/js/: 0e384e19.90c57e11.js  0e384e19.9bc9ed23.js  14daea63.061e1a8f.js  14eb3368.61ce8e00.js  14eb3368.80047f66.js  16df943a.68e2b7f2.js  16df943a.c2c7141a.js  17896441.49baab7b.js  17896441.4dabb8e9.js  17896441.6cbef9d3.js  17896441.ec495af5.js  1df93b7f.493cec26.js  1df93b7f.4dbe0910.js  1df93b7f.55c4bfc8.js  1df93b7f.94167f0d.js  237.0e264847.js  244e060f.2c018a75.js  244e060f.af77a348.js  285.5c82b178.js  2cb7c18f.45bc3a64.js  2cb7c18f.6e7f84fe.js  2d4df3ba.0480e8a8.js  2d4df3ba.d34d0dd5.js  33fc5bb8.85c83947.js  34aafeed.46897a9d.js  393be207.abb0a50e.js  393be207.b075d7b8.js  39728d41.a353ab3a.js  3a960e6e.a0a1784e.js  3a960e6e.ceb677db.js  422b907f.62f83612.js  425f5071.83127f7a.js  425f5071.bee05777.js  531d72f2.5b7f420c.js  (+86 more)
backend/: .env  agent.py  ingest_book.py  main.py  pyproject.toml  requirements.txt
backend/app/: agent_query.py  config.py  db.py  main.py  retrieval.py  schemas.py
backend/scripts/: ingest_book.py  init_db.py
blog/: atom.xml  index.html  rss.xml
markdown-page/: index.html
site/: docusaurus.config.ts  package-lock.json
specs/: frontend-chatbot-ui.md  rag_chatbot.spec.md
(+119 files in other folders)
