[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=5.20.0",
    "dotenv>=0.9.9",
    "openai-agents>=0.6.4",
    "qdrant-client>=1.16.2",
    "requests>=2.32.5",
    "simple-chalk>=0.1.0",
    "trafilatura>=2.0.0",
]
